# MNIST_Digit_Inferencer

./: .gitignore  Cargo.toml  LICENSE  README.md  weights.json
.github/workflows/: rust.yml
src/: main.rs
