[package]
name = "digit_classifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
approx = "0.5.1"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
mnist = "0.6.0"
nalgebra = { version = "0.35", features = ["rkyv-serialize"] }
nalgebra-lapack = { version = "0.28.0", default-features = false, features = ["lapack-accelerate"] }
# lapack-src = { version = "0.13", features = ["accelerate"] }
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
